--- a/index.html
+++ b/index.html
@@ -1191,6 +1191,8 @@
                 workspace.classList.remove('dragging');
             });
         }
+        // ---------- CUSTOM DEFAULT IMAGE ----------
+            const DEFAULT_IMAGE = './c0x4uB3X1R-O4tUH9Sllw_20f4493e92344469823d059571e21a02.jpg';
 
         function updateCanvasTransform() {
             canvasContainer.style.transform = `translate(${workspaceOffset.x}px, ${workspaceOffset.y}px) scale(${currentZoom})`;
