--- a/index.html
+++ b/index.html
@@ -1232,8 +1232,10 @@
             setTimeout(() => {
                 const canvas = newCanvas.querySelector('.main-canvas');
                 canvas.innerHTML = `
-                    <img src="./c0x4uB3X1R-O4tUH9Sllw_20f4493e92344469823d059571e21a02.jpg" alt="Generated variant" class="canvas-image" style="filter: hue-rotate(${Math.random() * 360}deg) saturate(${0.8 + Math.random() * 0.4})">
-                    <div class="object-overlay">
+                   <img src="./assets/c0x4uB3X1R-O4tUH9Sllw_20f4493e92344469823d059571e21a02.jpg" 
+     alt="Generated variant" 
+     class="canvas-image" 
+     style="filter: hue-rotate(${Math.random() * 360}deg) saturate(${0.8 + Math.random() * 0.4})">
                         <div class="object-region" style="left: 5%; top: 60%; width: 90%; height: 30%; z-index: 10;" data-object="table" data-type="background"></div>
                         <div class="object-region" style="left: 0%; top: 10%; width: 100%; height: 25%; z-index: 10;" data-object="hedge" data-type="background"></div>
                         <div class="object-region" style="left: 0%; top: 0%; width: 100%; height: 10%; z-index: 10;" data-object="sky" data-type="sky"></div>
