--- a/index.html
+++ b/index.html
@@ -1229,8 +1229,9 @@
             canvasContainer.appendChild(newCanvas);
             
             // Simulate variant generation
-            setTimeout(() => {
-                const canvas = newCanvas.querySelector('.main-canvas');
+setTimeout(() => {
+  // code to run after short delay
+}, 400); // 400ms = 0.4 seconds                const canvas = newCanvas.querySelector('.main-canvas');
                 canvas.innerHTML = `
                    <img src="./c0x4uB3X1R-O4tUH9Sllw_20f4493e92344469823d059571e21a02.jpg" 
      alt="Generated variant" 
